src/scss/components/_breadcrumb.scss
.breadcrumb {
  background: none;
  font-size: 0.9em;
  position: fixed;
  top: 110px;
  height: 30px;
  margin: 0;

  &.scrolled {
    visibility: hidden;
  }

  a,
  span,
  .material-symbols-outlined {
    text-decoration: none;
    color: var(--bs-body-color);
    margin: auto 0.3rem;

    &:hover {
      color: black !important;
      text-decoration: none;
    }
  }

  .bold {
    font-weight: bold !important;
  }

}

